--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,3 +6,37 @@ Literally every internet source tells me to use css's @font-face so... */
     font-family: Computer Modern;
     src: url('fonts/cmunrm.ttf')
 }
+
+/* github logo */
+
+.github-corner:hover .octo-arm {
+    animation: octocat-wave 560ms ease-in-out
+}
+
+@keyframes octocat-wave {
+
+    0%,
+    100% {
+        transform: rotate(0)
+    }
+
+    20%,
+    60% {
+        transform: rotate(-25deg)
+    }
+
+    40%,
+    80% {
+        transform: rotate(10deg)
+    }
+}
+
+@media (max-width:500px) {
+    .github-corner:hover .octo-arm {
+        animation: none
+    }
+
+    .github-corner .octo-arm {
+        animation: octocat-wave 560ms ease-in-out
+    }
+}
